# tap-ms-graph

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_ms_graph/: README.md  auth.py  client.py  pagination.py  schema.py  streams.py  tap.py
tap_ms_graph/metadata/: beta.json  v1.0.json
tap_ms_graph/schemas/: users.json
tap_ms_graph/schemas/v1.0/: subscribedSkus.json  user_events.json  user_messages.json  users.json
tap_ms_graph/tests/: __init__.py  conftest.py  test_auth.py  test_core.py
tools/: metadata.py  schema_builder.py
