[tool.poetry]
name = "tap-ms-graph"
version = "0.0.1"
description = "`tap-ms-graph` is a Singer tap for MSGraph, built with the Meltano Singer SDK."
authors = ["Robby Robinson"]
keywords = [
    "ELT",
    "MSGraph",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
singer-sdk = "^0.19.0"
fs-s3fs = { version = "^1.1.1", optional = true}
requests = "^2.28.1"
jsonref = "^1.1.0"
mock = "^5.1.0"
azure-identity = "^1.15.0"
responses = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
black = "^22.12.0"
pydocstyle = "^6.2.1"
mypy = "^0.991"
isort = "^5.12.0"
types-requests = "^2.28.11.7"
requests-mock = "^1.10.0"
lxml = "^4.9.2"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_ms_graph"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-ms-graph = 'tap_ms_graph.tap:TapMSGraph.cli'
